--- a/CarAccoutingGibdd/CarAccoutingGibdd/App.xaml
+++ b/CarAccoutingGibdd/CarAccoutingGibdd/App.xaml
@@ -13,14 +13,14 @@
                 <ResourceDictionary Source="Styles/Brushes.xaml"/>
                 
                 <!-- Базовый стиль-->
-                <ResourceDictionary Source="Styles/BaseElements.xaml"/>
+                <ResourceDictionary Source="Styles/BaseStyles.xaml"/>
 
             </ResourceDictionary.MergedDictionaries>
 
             <Style TargetType="{x:Type Window}" x:Key="Window.Ordinary">
                 <Setter Property="SnapsToDevicePixels" Value="true"/>
                 <Setter Property="Background" Value="{StaticResource Background.Window.Brush}"/>
-                <Setter Property="Icon" Value="/CarAccountingGibdd;component/Images/LogoGibdd.ico"/>
+                <Setter Property="Icon" Value="/CarAccountingGibdd;component/Resources/IconGibdd.ico"/>
             </Style>
 
         </ResourceDictionary>
