--- a/CarAccountingGibdd/CarAccountingGibdd/Windows/AuthWindow.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Windows/AuthWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="CarAccoutingGibdd.AuthWindow"
+﻿<Window x:Class="CarAccountingGibdd.AuthWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CarAccoutingGibdd"
+        xmlns:local="clr-namespace:CarAccountingGibdd"
         mc:Ignorable="d"
         
-        xmlns:components="clr-namespace:CarAccoutingGibdd.Components"
+        xmlns:components="clr-namespace:CarAccountingGibdd.Components"
         
         Title="Вход в систему управления ГИБДД" 
         Height="700" Width="500"   
