--- a/CarAccountingGibdd/CarAccountingGibdd/Windows/NavWindowAdmin.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Windows/NavWindowAdmin.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="CarAccoutingGibdd.Windows.NavWindowAdmin"
+﻿<Window x:Class="CarAccountingGibdd.Windows.NavWindowAdmin"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CarAccoutingGibdd.Windows"
+        xmlns:local="clr-namespace:CarAccountingGibdd.Windows"
         mc:Ignorable="d"
         
         xmlns:icons="http://materialdesigninxaml.net/winfx/xaml/themes"
