--- a/CarAccountingGibdd/CarAccountingGibdd/Controls/ApplicationCard.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Controls/ApplicationCard.xaml
@@ -59,7 +59,7 @@
                     <TextBlock DockPanel.Dock="Top"
                                Margin="0 0 0 12"
                                TextWrapping="Wrap">
-                    <Run Text="ВИН:" Style="{StaticResource Run.Subtitle}"/>
+                    <Run Text="VIN:" Style="{StaticResource Run.Subtitle}"/>
                     <Run Text="{Binding Vehicle.Vin}"
                          Style="{StaticResource Run.Description}"/>
                     </TextBlock>
