--- a/CarAccountingGibdd/CarAccountingGibdd/Dialogs/EditApplicationDialog.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Dialogs/EditApplicationDialog.xaml
@@ -45,8 +45,8 @@
                                             DockPanel.Dock="Top"
                                             behaviors:TextBoxValidationBehavior.ValidationType="CyrillicAndNumbers"/>
 
-            <components:AutoCompleteTextBox Placeholder="Автомобиль (марка, модель, год, цвет)"
-                                            DisplayMemberPath="Info"
+            <components:AutoCompleteTextBox Placeholder="Транспорт (марка, модель. VIN)"
+                                            DisplayMemberPath="ShortInfo"
                                             x:Name="vehicleATB"
                                             Margin="0 0 0 24"
                                             DockPanel.Dock="Top"
