--- a/CarAccountingGibdd/CarAccountingGibdd/Dialogs/InfoApplicationDialog.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Dialogs/InfoApplicationDialog.xaml
@@ -196,8 +196,24 @@
                     <TextBlock DockPanel.Dock="Top"
                                Margin="0 0 0 12"
                                TextWrapping="Wrap">
+                    <Run Text="Номер платежа:" Style="{StaticResource Run.Subtitle}"/>
+                    <Run Text="{Binding PaymentStatusNumber, Mode=OneWay}"
+                         Style="{StaticResource Run.Description}"/>
+                    </TextBlock>
+
+                    <TextBlock DockPanel.Dock="Top"
+                               Margin="0 0 0 12"
+                               TextWrapping="Wrap">
+                    <Run Text="Статус платежа:" Style="{StaticResource Run.Subtitle}"/>
+                    <Run Text="{Binding PaymentStatusName, Mode=OneWay}"
+                         Style="{StaticResource Run.Description}"/>
+                    </TextBlock>
+
+                    <TextBlock DockPanel.Dock="Top"
+                               Margin="0 0 0 12"
+                               TextWrapping="Wrap">
                     <Run Text="Номер инспекции:" Style="{StaticResource Run.Subtitle}"/>
-                    <Run Text="{Binding FirstInspectionNumber, Mode=OneWay}"
+                    <Run Text="{Binding InspectionNumber, Mode=OneWay}"
                          Style="{StaticResource Run.Description}"/>
                     </TextBlock>
 
@@ -205,7 +221,15 @@
                                Margin="0 0 0 12"
                                TextWrapping="Wrap">
                     <Run Text="ФИО инспектора:" Style="{StaticResource Run.Subtitle}"/>
-                    <Run Text="{Binding FirstEmployeeFullname, Mode=OneWay}"
+                    <Run Text="{Binding InspectorFullname, Mode=OneWay}"
+                         Style="{StaticResource Run.Description}"/>
+                    </TextBlock>
+
+                    <TextBlock DockPanel.Dock="Top"
+                               Margin="0 0 0 12"
+                               TextWrapping="Wrap">
+                    <Run Text="ФИО оператора:" Style="{StaticResource Run.Subtitle}"/>
+                    <Run Text="{Binding OperatorFullname, Mode=OneWay}"
                          Style="{StaticResource Run.Description}"/>
                     </TextBlock>
 
