--- a/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesOperator/ApplicationPageOperator.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesOperator/ApplicationPageOperator.xaml
@@ -1,11 +1,11 @@
-﻿<Page x:Class="CarAccountingGibdd.Pages.PagesInspector.ApplicationPageInspector"
+﻿<Page x:Class="CarAccountingGibdd.Pages.PagesOperator.ApplicationPageOperator"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:CarAccountingGibdd.Pages.PagesInspector"
+      xmlns:local="clr-namespace:CarAccountingGibdd.Pages.PagesOperator"
       mc:Ignorable="d" 
-      
+     
       d:Width="1000" d:Height="450"
       d:Background="{StaticResource Background.Window.Brush}"
       xmlns:converters="clr-namespace:CarAccountingGibdd.Classes.Converters">
@@ -48,6 +48,15 @@
                     Content="Очистить все"
                     Tag="restore"
                     ToolTip="Сброс фильтров"/>
+
+
+            <Button Style="{StaticResource Button.Primary.Icon}"
+                    DockPanel.Dock="Right"
+                    MinWidth="200"
+                    Content="Новая заявка"
+                    Tag="add"
+                    Click="Add_Click"/>
+
         </DockPanel>
 
         <!-- Область вывода информации -->
